[project]
name = "fastbook"
version = "0.1.0"
requires-python = ">=3.10.6"
dependencies = [
    "azure-cognitiveservices-search-imagesearch>=2.0.1",
    "fastai>=2.0.0",
    "graphviz>=0.20.3",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "nbdev>=0.2.12",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]
